// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactSuggestion component should display contact suggestion for a contact 1`] = `
<div
  className="recipient"
>
  <Avatar
    className=""
    image=""
    size="small"
    text="JS"
  />
  <Identity
    details="https://jonsnow.mycozy.cloud"
    name="Jon Snow"
  />
</div>
`;

exports[`ContactSuggestion component should display contact suggestion for a contact without fullname (for example created by a share modal) 1`] = `
<div
  className="recipient"
>
  <Avatar
    className=""
    image=""
    size="small"
    text="J"
  />
  <Identity
    details="-"
    name="jon.snow@email.com"
  />
</div>
`;

exports[`ContactSuggestion component should display contact suggestion for a group 1`] = `
<div
  className="recipient"
>
  <Avatar
    className=""
    image=""
    size="small"
    text="G"
  />
  <Identity
    details="2 members"
    name="The Night's Watch"
  />
</div>
`;
